# optml_miniprj

./: .gitignore  README.md  parse_logs.py  prepare_inception.py  pyproject.toml  requirements.txt  run_gan.py  script.sbatch
backup/tensorboard/Adam/gan_ep150_lr0.0001_bsz128_imsz64optbeta0.52022-05-31T19:29:25.439797/: events.out.tfevents.1654018165.i15.29784.0  run.txt
backup/tensorboard/Adam/gan_ep150_lr0.0002_bsz128_imsz64optbeta0.52022-05-31T19:28:06.547246/: events.out.tfevents.1654018086.i08.23109.0  run.txt
backup/tensorboard/Adam/gan_ep150_lr0.0002_bsz128_imsz64optbeta0.92022-05-31T19:29:45.664831/: events.out.tfevents.1654018185.i54.11878.0  run.txt
backup/tensorboard/Adam/gan_ep150_lr0.0005_bsz128_imsz64optbeta0.52022-05-31T19:29:25.515079/: events.out.tfevents.1654018165.i40.25223.0  run.txt
backup/tensorboard/ExtraAdam/gan_ep100_lrD0.0001_lrG0.0001_bsz128_imsz64optbeta0.52022-06-01T23:59:28.330199/: args.pt  events.out.tfevents.1654120768.i24.38968.0  run.txt
backup/tensorboard/ExtraAdam/gan_ep100_lrD0.0002_lrG0.0001_bsz128_imsz64optbeta0.52022-06-01T23:59:39.988973/: args.pt  events.out.tfevents.1654120780.i68.19706.0  run.txt
cmd/: create_figs.py  migrate_old_tbdumps.py  parse_logs.py
figs/: ALL_Extra_SGD_FID.eps  ALL_SGD_FID.eps  Extra_SGD_FID.eps  Extra_SGD_IS.eps  SGD_FID.eps  SGD_IS.eps
src/: args.py  inception_utils.py  utils.py
src/analysis/: DCGAN_exp_analysis.ipynb
src/dataset/: dataset.py
src/modeling/: gan.py  train_logger.py  trainig.py  utils.py
src/modeling/optimizers/: extragradient.py  utils.py
(+8 files in other folders)
