[tool.poetry]
name = "optml_miniprj"
version = "0.1.0"
description = ""
authors = ["Theofilos <theofilasp@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
torch = "^1.11.0"
torchvision = "^0.12.0"
matplotlib = "^3.5.2"
ipython = "^8.3.0"
tqdm = "^4.64.0"
tensorboard = "^2.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
